# enjin

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile
src/: events.h  main.cpp  types.h
src/input/: input.h
src/interfaces/: configurable.h  drawable.h  loadable.h
src/math/: vec.h  xfm.cpp  xfm.h
src/rnd/: mesh.cpp  mesh.h  renderer.cpp  renderer.h  tex.cpp  tex.h
src/serial/: stream.cpp  stream.h
